--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,15 @@
 body{
-    background-color:black;
+    background-color:white;
 }
 
-h1,h2{
-    color:#fff176;
+h1,h5{
+    color:black;
+    font-family: 'Oswald', sans-serif;
+    font-size: 80px;
+    text-decoration: underline;
+    text-decoration-color:greenyellow;
 }
 p{
-    color: white;
+     font-family: 'Fjalla One', sans-serif;
+    font-size: 20px;
 }
